--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,31 @@
     "description": "hexlet-webinar-todocli",
     "type": "project",
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Aslan\\Todocli\\": "src/"
-        }
-    },
     "authors": [
         {
             "name": "Aslan",
             "email": "autlevaslan@yandex.ru"
         }
     ],
-    "require": {}
+    "autoload": {
+        "files": [
+            "src/Cli.php",
+            "config/app.php"
+        ],
+        "psr-4": {
+            "Todo\\Tests\\": "tests"
+        }
+    },
+    "bin": [
+        "bin/todo"
+    ],
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.13"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-latest"
+        ,
+        "squizlabs/php_codesniffer": "^3.6",
+        "phpunit/phpunit": "^9.5"
+    }
 }
